--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "s2id"
+name = "slados"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.3"
 tokio = { version = "1.11.0", features = ["full"] }
+log = "0.4.14"
+env_logger = "0.9.0"
+serde = "1.0.130"
+toml = "0.5.8"
 
