--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "2.33.3"
+clap = "3.0.0-beta.4"
 tokio = { version = "1.11.0", features = ["full"] }
 log = "0.4.14"
 env_logger = "0.9.0"
-serde = "1.0.130"
+serde = { version = "1.0.130", features = ["derive"] }
 toml = "0.5.8"
 
