--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ log = "0.4.14"
 env_logger = "0.9.0"
 serde = { version = "1.0.130", features = ["derive"] }
 toml = "0.5.8"
+lazy_static = "1.4.0"
+socket2 = "0.3.4"
 
