--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "slados"
 version = "0.1.0"
 edition = "2018"
+authors = ["Milo Banks", "Eli Hatton", "Teo Welton (extent)", "Aiden Gandhi (extent)", "Jack Revoy (extent)"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
