--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,17 @@ authors = ["Milo Banks", "Eli Hatton", "Teo Welton (extent)", "Aiden Gandhi (ext
 
 [dependencies]
 clap = "3.0.0-beta.4"
-tokio = { version = "1.11.0", features = ["full"] }
+hyper = { version = "0.14.13", features = ["full"] }
+tokio = { version = "1.12.0", features = ["full"] }
 log = "0.4.14"
 env_logger = "0.9.0"
 serde = { version = "1.0.130", features = ["derive"] }
-bincode = "1.3.3"
+serde_json = "1.0.68"
+serde_qs = "0.8.5"
 toml = "0.5.8"
 lazy_static = "1.4.0"
 socket2 = "0.3.4"
 rand = "0.8.4"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+futures = "0.3.17"
 
